--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="./ielts.png">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="./img/ielts.png">
+    <link rel="stylesheet" type="text/css" href="./Css/style.css">
     <title>IELTS Ms Hana</title>
 </head>
 <body>
@@ -32,20 +32,20 @@
         <div id="main_body_content">
             <div id="text">
                 <h1>Cambridge English IELTS 10</h1>
-                <a href="./cam10.html">
-                    <img src="./cam10.png" width="60%">
+                <a href="./Cam/cam10.html">
+                    <img src="./img/cam10.png" width="60%">
                 </a>
             </div>
             <div id="text">
                 <h1>Cambridge English IELTS 11</h1>
-                <a href="#">
-                    <img src="./cam11.jpg" width="60%">
+                <a href="./Cam/cam11.html">
+                    <img src="./img/cam11.jpg" width="60%">
                 </a>
             </div>
             <div id="text">
                 <h1>Cambridge English IELTS 12</h1>
-                <a href="#">
-                    <img src="./cam12.jpg" width="60%">
+                <a href="./Cam/cam11.html">
+                    <img src="./img/cam12.jpg" width="60%">
                 </a>
             </div>
         </div>
