--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="https://www.facebook.com/hien.ga.908">Facebook</a></li>
                 <li><a href="https://www.facebook.com/mshanaielts/">Fanpage</a></li>
                 <li><a href="https://www.facebook.com/groups/1836779926553836/?multi_permalinks=2336659463232544%2C2336036003294890%2C2335583560006801%2C2335496960015461%2C2334954843403006&notif_id=1551352902244471&notif_t=group_activity">Group</a></li>
-                <li><a href="https://www.facebook.com/tiendat.shynw">Designer</a></li>
+                <li><a href="https://www.facebook.com/tiendat104.hust">Designer</a></li>
             </ul>
             <div class="clear"></div>
         </div>
@@ -33,7 +33,7 @@
             <div id="text">
                 <h1>Cambridge English IELTS 10</h1>
                 <a href="./Cam/cam10.html">
-                    <img src="./img/cam10.png" width="60%">
+                    <img src="./img/cam10.jpg" width="60%">
                 </a>
             </div>
             <div id="text">
@@ -53,7 +53,7 @@
     </div>
     <div id="footer_background">
         <div id="footer_content">
-            <h1>Cảm ơn bạn vì đã sử dụng trang web của tôi.</h1>
+            <h1>Thank you very much!</h1>
         </div>
     </div>
 </body>
