--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="./img/ielts.png">
+    <link rel="icon" type="image/x-icon" href="./img/icon_logo.jpg">
     <link rel="stylesheet" type="text/css" href="./Css/style.css">
-    <title>IELTS Ms Hana</title>
+    <title>Ms Hana Ielts</title>
 </head>
 <body>
     <div id="header_background">
         <div id="header_content">
-            <h1><a href="https://www.facebook.com/hien.ga.908">IELTS Ms Hana</a></h1>
+            <h1><a href="https://www.facebook.com/hien.ga.908">Ms Hana Ielts</a></h1>
             <ul>
                 <li><a href="https://www.facebook.com/hien.ga.908">Facebook</a></li>
                 <li><a href="https://www.facebook.com/mshanaielts/">Fanpage</a></li>
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div id="nav_content">
-        <h1><a href="./index.html">IELTS Ms Hana</a></h1>
+        <h1><a href="./index.html">Ms Hana Ielts</a></h1>
         <h2>People see difficulities. I see opportunities.</h2>
     </div>
     <div id="main_header">
