--- a/Cam/cam10.html
+++ b/Cam/cam10.html
@@ -4,81 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="../img/ielts.png">
+    <link rel="icon" type="image/x-icon" href="../img/icon_logo.jpg">
     <link rel="stylesheet" type="text/css" href="../Css/cam.css">
-    <title>IELTS Ms Hana</title>
+    <title>Ms Hana Ielts</title>
 </head>
 <body>
-    <h2>Test 1</h2>
-    <h3>Section 1</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test1_section1.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 2</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test1_section2.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 3</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test1_section3.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 4</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test1_section4.mp3" type="audio/mpeg">
-    </audio>
+    <div id="header_background">
+        <div id="header_content">
+            <h1><a href="https://www.facebook.com/hien.ga.908">Ms Hana Ielts</a></h1>
+                <ul>
+                    <li><a href="https://www.facebook.com/hien.ga.908">Facebook</a></li>
+                    <li><a href="https://www.facebook.com/mshanaielts/">Fanpage</a></li>
+                    <li><a href="https://www.facebook.com/groups/1836779926553836/?multi_permalinks=2336659463232544%2C2336036003294890%2C2335583560006801%2C2335496960015461%2C2334954843403006&notif_id=1551352902244471&notif_t=group_activity">Group</a></li>
+                    <li><a href="https://www.facebook.com/tiendat104.hust">Designer</a></li>
+                </ul>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div class="main">
+        <h2>Test 1</h2>
+        <h3>Section 1</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test1_section1.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 2</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test1_section2.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 3</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test1_section3.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 4</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test1_section4.mp3" type="audio/mpeg">
+        </audio></br>
 
-    <h2>Test 2</h2>
-    <h3>Section 1</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test2_section1.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 2</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test2_section2.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 3</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test2_section3.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 4</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test2_section4.mp3" type="audio/mpeg">
-    </audio>
+        <h2>Test 2</h2>
+        <h3>Section 1</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test2_section1.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 2</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test2_section2.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 3</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test2_section3.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 4</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test2_section4.mp3" type="audio/mpeg">
+        </audio></br>
 
-    <h2>Test 3</h2>
-    <h3>Section 1</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test3_section1.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 2</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test3_section2.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 3</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test3_section3.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 4</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test3_section4.mp3" type="audio/mpeg">
-    </audio>
+        <h2>Test 3</h2>
+        <h3>Section 1</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test3_section1.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 2</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test3_section2.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 3</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test3_section3.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 4</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test3_section4.mp3" type="audio/mpeg">
+        </audio></br>
 
-    <h2>Test 4</h2>
-    <h3>Section 1</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test4_section1.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 2</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test4_section2.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 3</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test4_section3.mp3" type="audio/mpeg">
-    </audio>
-    <h3>Section 4</h3>
-    <audio controls>
-        <source src="../audio/Cam_10/test4_section4.mp3" type="audio/mpeg">
-    </audio>
+        <h2>Test 4</h2>
+        <h3>Section 1</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test4_section1.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 2</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test4_section2.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 3</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test4_section3.mp3" type="audio/mpeg">
+        </audio></br>
+        <h3>Section 4</h3></br>
+        <audio controls>
+            <source src="../audio/Cam_10/test4_section4.mp3" type="audio/mpeg">
+        </audio></br>
+    </div>
+    <div id="footer_background">
+        <div id="footer_content">
+            <h1>Thank you very much!</h1>
+        </div>
+    </div>
 </body>
 </html>
