--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="header_background">
         <div id="header_content">
-            <h1><a href="https://www.facebook.com/hien.ga.908">Ms Hana Ielts</a></h1>
+            <h1><a href="./index.html">Ms Hana Ielts</a></h1>
             <ul>
                 <li><a href="https://www.facebook.com/hien.ga.908">Facebook</a></li>
                 <li><a href="https://www.facebook.com/mshanaielts/">Fanpage</a></li>
