--- a/index.html
+++ b/index.html
@@ -35,18 +35,21 @@
                 <a href="./Cam/cam10.html">
                     <img src="./img/cam10.jpg" width="60%">
                 </a>
+                <h1><a href="./pdf/Cambridge IELTS 10.pdf" class="source">Source: (.pdf)</a></h1>
             </div>
             <div id="text">
                 <h1>Cambridge English IELTS 11</h1>
                 <a href="./Cam/cam11.html">
                     <img src="./img/cam11.jpg" width="60%">
                 </a>
+                <h1><a href="./pdf/Cambridge IELTS 11.pdf" class="source">Source: (.pdf)</a></h1>
             </div>
             <div id="text">
                 <h1>Cambridge English IELTS 12</h1>
                 <a href="./Cam/cam12.html">
                     <img src="./img/cam12.jpg" width="60%">
                 </a>
+                <h1><a href="./pdf/Cambridge IELTS 12.pdf" class="source">Source: (.pdf)</a></h1>
             </div>
         </div>
         <div class="clear"></div>
