--- a/index.html
+++ b/index.html
@@ -31,21 +31,28 @@
     <div id="main_body_background">
         <div id="main_body_content">
             <div id="text">
-                <h1>Cambridge English IELTS 10</h1>
+                <h1>Cam 9</h1>
+                <a href="./Cam/cam9.html">
+                    <img src="./img/cam9.jpg" width="60%">
+                </a>
+                <h1><a href="./pdf/Cambridge IELTS 9.pdf" class="source">Source: (.pdf)</a></h1>
+            </div>
+            <div id="text">
+                <h1>Cam 10</h1>
                 <a href="./Cam/cam10.html">
                     <img src="./img/cam10.jpg" width="60%">
                 </a>
                 <h1><a href="./pdf/Cambridge IELTS 10.pdf" class="source">Source: (.pdf)</a></h1>
             </div>
             <div id="text">
-                <h1>Cambridge English IELTS 11</h1>
+                <h1>Cam 11</h1>
                 <a href="./Cam/cam11.html">
                     <img src="./img/cam11.jpg" width="60%">
                 </a>
                 <h1><a href="./pdf/Cambridge IELTS 11.pdf" class="source">Source: (.pdf)</a></h1>
             </div>
             <div id="text">
-                <h1>Cambridge English IELTS 12</h1>
+                <h1>Cam 12</h1>
                 <a href="./Cam/cam12.html">
                     <img src="./img/cam12.jpg" width="60%">
                 </a>
