--- a/Cam/cam12.html
+++ b/Cam/cam12.html
@@ -16,7 +16,7 @@
                     <li><a href="https://www.facebook.com/hien.ga.908">Facebook</a></li>
                     <li><a href="https://www.facebook.com/mshanaielts/">Fanpage</a></li>
                     <li><a href="https://www.facebook.com/groups/1836779926553836/?multi_permalinks=2336659463232544%2C2336036003294890%2C2335583560006801%2C2335496960015461%2C2334954843403006&notif_id=1551352902244471&notif_t=group_activity">Group</a></li>
-                    <li><a href="https://www.facebook.com/tiendat104.hust">Designer</a></li>
+                    <li><a href="https://www.facebook.com/ntdat.104">Designer</a></li>
                 </ul>
             <div class="clear"></div>
         </div>
